feat: update ts config and new linter
- add "isolatedModules": true,
- "importsNotUsedAsValues": "error",
- "noImplicitAny": true,
- add a must read section to the ts docs
- self lint

Some of these changes here and in the new linter config version try to encode/force best pratices found in the references added in the "must read" section in the ts docs.
We should try to extract more rules from those articles into linter rules or ts config options. @Gozala

--- a/src/config/tsconfig.aegir.json
+++ b/src/config/tsconfig.aegir.json
@@ -2,9 +2,11 @@
     "compilerOptions": {
         "allowJs": true,
         "checkJs": true,
+        "isolatedModules": true,
+        "importsNotUsedAsValues": "error",
         "forceConsistentCasingInFileNames": true,
         "noImplicitReturns": false,
-        "noImplicitAny": false, 
+        "noImplicitAny": true, 
         "noImplicitThis": true,
         "noFallthroughCasesInSwitch": true,
         "noUnusedLocals": true,
