--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "dirty-chai": "^2.0.1",
     "electron-mocha": "^9.3.3",
     "eslint": "^7.11.0",
-    "eslint-config-ipfs": "^0.1.0",
+    "eslint-config-ipfs": "ipfs/eslint-config-ipfs#feat/standard-ts",
     "execa": "^4.1.0",
     "extract-zip": "^2.0.1",
     "findup-sync": "^4.0.0",
